--- a/src/Todos/todo.css
+++ b/src/Todos/todo.css
@@ -32,6 +32,7 @@ button[type="submit"] {
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 li {
@@ -52,4 +53,11 @@ button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 18px;
+}
+
+@media only screen and (max-width: 767px) {
+  ul {
+    display: flex;
+    flex-direction: column;
+  }
 }
